<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:maxHeight="120dp"
        tools:srcCompat="@drawable/poster_cinema" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/text_25_bold_darkgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_toEndOf="@+id/iv_poster"
        android:text="@string/user_review_title"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/tv_date"
        style="@style/text_15_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_title"
        android:layout_alignStart="@+id/tv_title"
        android:layout_marginTop="5dp"
        android:text="@string/user_review_date" />

    <TextView
        android:id="@+id/tv_comment"
        style="@style/text_15_bold_lightgray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_date"
        android:layout_alignStart="@+id/tv_date"
        android:layout_marginTop="5dp"
        android:text="@string/user_review_comment" />

    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_alignTop="@+id/tv_date"
        android:isIndicator="true"
        android:progressTint="@android:color/holo_orange_light" />

</RelativeLayout>