<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".view.activity.IntroActivity">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/dotsIndicator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
        android:id="@+id/dotsIndicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:dotsColor="@color/dodger_blue"
        app:dotsCornerRadius="10dp"
        app:dotsSize="10dp"
        app:dotsSpacing="5dp"
        app:dotsWidthFactor="2.5"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewpager"
        app:progressMode="false"
        app:selectedDotColor="@color/dodger_blue" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        style="@style/button_20_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@drawable/button_10_dodger_blue"
        android:text="@string/btn_login"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dotsIndicator" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sign_up"
        style="@style/button_20_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_10_dodger_blue"
        android:text="@string/btn_sign_up"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/btn_later"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_later"
        style="@style/button_20_bold_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_10_dodger_blue"
        android:text="@string/btn_later"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>